# local-dev-airflow

./: Dockerfile  README.md  airflow-dags-pvc.yaml  myvalues.yaml  pyproject.toml  requirements.txt  values.yaml
dags/: test-dag.py
templates/: airflow-dags-pv.yaml  values-airflow.yaml  values.yaml
